amc integration modification